k8s-618645/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-618645-deployment
  namespace: default
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: webapp-sa-618645
      containers:
        - name: webapp
          image: ghcr.io/narendran573/python-web-app:v1:887120ca144960aeb5169d017f712d65dbd24379
          ports:
            - containerPort: 80
          volumeMounts:
            - name: 618645-app-storage
              mountPath: /usr/share/nginx/html  
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: 618645-app-storage
          persistentVolumeClaim:
            claimName: webapp-pvc

---


apiVersion: v1
kind: Service
metadata:
  name: webapp-618645-service
  namespace: default
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---


apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp-618645-route
spec:
  to:
    kind: Service
    name: webapp-618645-service
  port:
    targetPort: 80
  tls:
    termination: edge
